--- a/green_theme.scss
+++ b/green_theme.scss
@@ -10,7 +10,7 @@ $footer-bg: #FDFBF7;
 $link-color: #AE8BD1;
 
 // Font size
-$font-size-root: 5;
+$font-family-monospace: 7;
 
 // Inline code
 $code-bg: #FDFBF7;
