--- a/docs/site_libs/quarto-html/quarto-syntax-highlighting.css
+++ b/docs/site_libs/quarto-html/quarto-syntax-highlighting.css
@@ -33,7 +33,7 @@
 
 /* other quarto variables */
 :root {
-  --quarto-font-monospace: 7;
+  --quarto-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 pre > code.sourceCode > span {
