--- a/green_theme.scss
+++ b/green_theme.scss
@@ -1,6 +1,6 @@
 /*-- scss:defaults --*/
 
-// Import fonts
+// Import fonts (define mainfont in _quarto.yml)
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito:wght@300&family=Roboto+Mono:wght@300&display=swap');
 
 // Colors
@@ -20,26 +20,18 @@ $footer-bg: $cream;
 $link-color: $purple;
 
 // Font size
-$font-family-monospace: 7;
+// $font-family-monospace: 7;
 
 // Inline code
-$code-bg: #FDFBF7;
-$code-color: #AE8BD1; 
+$code-bg: $cream;
+$code-color: $purple; 
 
 // Code blocks
-$code-block-bg: #FDFBF7;
-
-
-
-
-
-
-
-
+$code-block-bg: $cream;
 
 /*-- scss:rules --*/
 
-// adjust size of logo (top left corner)
+// adjust size of logo (top left corner; see https://github.com/robertmitchellv/robertmitchellv.github.io/blob/main/custom-dark.scss)
 .navbar-brand img {
   max-height: 60px;
   width: auto;
@@ -52,6 +44,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #64605F;
 }
 
+// body text line height (1.5 min for assistive tech)
 body {
   line-height: 1.5;
 }
