added tl;dr to openscapes blogpost; updated purple link color and .quote-text-bg color

--- a/green_theme.scss
+++ b/green_theme.scss
@@ -11,7 +11,7 @@ $cream: #FDFBF7;
 $dark-gray: #5A5856;
 $gray: #64605f;
 $light-gray: #949799;
-$purple: #AE8BD1;
+$purple: #9158A2; //#AE8BD1;
 $black: #000000;
 $burnt-orange: #ad7237;
 
@@ -112,7 +112,7 @@ body {
 
 // gray background
 .quote-text-bg {
-  background-color: rgba(166, 164, 161, 0.4);
+  background-color: rgba(152, 160, 141, 0.3); //rgba(166, 164, 161, 0.4);
   padding-top: 5px;
   padding-bottom: 5px;
   padding-right: 5px;
