added roundtable talk to talks & workshops

--- a/green_theme.scss
+++ b/green_theme.scss
@@ -129,7 +129,7 @@ body {
 
 // button hover styling
 .btn:hover {
-  color: $dark-gray;
+  color: $cream;
   background-color: $purple;
   border-color: $dark-gray;
 }
