--- a/styles.scss
+++ b/styles.scss
@@ -189,3 +189,8 @@ body {
 .description {
   font-size: 25px;
 }
+
+// about page link button colors 
+div.quarto-about-jolla .about-link {
+  color: $dark-sage-green;
+}
