moved most navbar icons to drop down menu; added github to footer note

--- a/styles.scss
+++ b/styles.scss
@@ -179,6 +179,12 @@ body {
   font-size: 18px;
 }
 
+// dropdown navbar text color
+.dropdown-item{
+  color: $dark-sage-green;
+  background-color: $cream;
+}
+
 // listing card styling
 .card {
   background-color: $cream;
