updated map with TMB!!!

--- a/styles.scss
+++ b/styles.scss
@@ -203,6 +203,13 @@ blockquote {
   //border-radius: 5.25em;
 }
 
+/*.quarto-category {
+  color: $purple;
+}
+.listing-category{
+  color: $purple;
+}*/
+
 // listing description text styling
 .description {
   font-size: 25px;
@@ -212,3 +219,4 @@ blockquote {
 div.quarto-about-jolla .about-link {
   color: $dark-green;
 }
+
