--- a/styles.scss
+++ b/styles.scss
@@ -158,7 +158,7 @@ blockquote {
 // button hover styling
 .btn:hover {
   color: $cream;
-  background-color: $purple;
+  background-color: $orange;//$purple;
   border-color: $dark-gray;
 }
 
