--- a/styles.scss
+++ b/styles.scss
@@ -75,14 +75,11 @@ a {
   text-decoration: none;
 }
 
-/* ID selectors */
-
 // responsive-ish iframes (width adjusts to viewport size; couldn't figure out how to expand viewport height, so set to this size for now)
 #map-size {
   width: 100%;
   height: 350px;
 }
-
 
 // landing page text
 #bio {
@@ -93,6 +90,12 @@ a {
 #landing-icons {
   font-size: 1.4em;
 }
+
+// josefin text
+.josefin-font {
+ font-family: $josefin; 
+}
+
 
 // banner titles (these turned dark green after updating to Quarto v1.5.56, so forcing them to be gray again with this rule)
 .quarto-title-banner h1 {
