--- a/styles.scss
+++ b/styles.scss
@@ -257,7 +257,7 @@ div.quarto-about-jolla .about-link {
 }
 
 // responisve embedded slides (thanks Casey O'Hara; see https://github.com/nceas-learning-hub/coreR_test/blob/main/lh-style.css)
-.slide-deck{
+/*.slide-deck{
   border: 3px solid #dee2e6;
     border-top-color: rgb(222, 226, 230);
     border-top-style: solid;
@@ -278,4 +278,4 @@ div.quarto-about-jolla .about-link {
     border-image-repeat: initial;
   width: 70%;
   height: 475px;
-}
+}*/
