--- a/styles.scss
+++ b/styles.scss
@@ -36,7 +36,7 @@ $navbar-fg: $medium-green;
 $navbar-hl: $terracotta;//$orange;//$purple; 
 $body-bg: $light-green;
 $body-color: $medium-gray;
-$footer-bg: $cream; 
+$footer-bg: $light-green; //$cream; 
 $link-color: $terracotta;// $orange;//$purple;
 
 // Inline code
